--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:coverage": "nyc --verbose --reporter=text --reporter=lcov jest"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,10 @@
     "jest": "^29.7.0",
     "nyc": "^17.1.0",
     "supertest": "^7.0.0"
+  },
+  "nyc": {
+    "reporter": ["text", "lcov"],
+    "include": ["src/**/*.js"],
+    "exclude": ["src/server.js"]
   }
 }
