--- a/package.json
+++ b/package.json
@@ -16,14 +16,24 @@
     "mongoose": "^8.10.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.26.9",
+    "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nyc": "^17.1.0",
     "supertest": "^7.0.0"
   },
   "nyc": {
-    "reporter": ["text", "lcov"],
-    "include": ["src/**/*.js"],
-    "exclude": ["src/server.js", "tests/**/*.js"],
+    "reporter": [
+      "text",
+      "lcov"
+    ],
+    "include": [
+      "src/**/*.js"
+    ],
+    "exclude": [
+      "src/server.js",
+      "tests/**/*.js"
+    ],
     "all": true
   }
 }
