--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "test:coverage": "nyc --verbose --reporter=text --reporter=lcov jest"
+    "coverage": "nyc npm test"
   },
   "keywords": [],
   "author": "",
@@ -20,13 +20,26 @@
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nyc": "^17.1.0",
-    "supertest": "^7.0.0"
+    "supertest": "^7.1.0"
   },
   "nyc": {
-    "reporter": ["text", "lcov"],
-    "include": ["src/**/*.js"],
-    "exclude": ["src/server.js", "tests/**/*.js"],
+    "reporter": [
+      "text",
+      "lcov"
+    ],
+    "include": [
+      "src/**/*.js"
+    ],
+    "exclude": [
+      "src/server.js",
+      "tests/**/*.js"
+    ],
     "all": true,
+    "check-coverage":true,
+    "lines":90,
+    "statements":90,
+    "functions":90,
+    "branches":90,
     "temp-dir": "coverage"
   }
 }
