--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@babel/preset-env": "^7.26.9",
+    "@istanbuljs/nyc-config-babel": "^3.0.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "nyc": "^17.1.0",
@@ -35,11 +36,11 @@
       "tests/**/*.js"
     ],
     "all": true,
-    "check-coverage":true,
-    "lines":90,
-    "statements":90,
-    "functions":90,
-    "branches":90,
+    "check-coverage": true,
+    "lines": 90,
+    "statements": 90,
+    "functions": 90,
+    "branches": 90,
     "temp-dir": "coverage"
   }
 }
