--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
   "name": "crud-tallerautos",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Sistema CRUD para taller de automóviles",
+  "main": "src/server.js",
   "scripts": {
-    "test": "jest",
-    "coverage": "nyc npm test"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "set NODE_ENV=test&& jest --detectOpenHandles --config=package.json",
+    "test:watch": "set NODE_ENV=test&& jest --watch --config=package.json",
+    "coverage": "set NODE_ENV=test&& jest --coverage --runInBand --forceExit --config=package.json --coverageDirectory=.\\coverage --coverageReporters=json --coverageReporters=lcov --coverageReporters=text",
+    "check-coverage": "npx nyc report --reporter=text --temp-dir=.\\coverage --cwd=.",
+    "lint": "eslint src/ tests/",
+    "prepare": "husky install",
+    "clean": "rmdir /s /q coverage .nyc_output 2>nul || exit 0"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "CRUD",
+    "taller",
+    "autos",
+    "express",
+    "mongoose"
+  ],
+  "author": "Tu Nombre",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.7",
@@ -16,31 +29,69 @@
     "mongoose": "^8.10.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.9",
     "@babel/preset-env": "^7.26.9",
     "@istanbuljs/nyc-config-babel": "^3.0.0",
     "babel-jest": "^29.7.0",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.29.1",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
+    "nodemon": "^3.1.0",
     "nyc": "^17.1.0",
     "supertest": "^7.1.0"
   },
   "nyc": {
+    "extends": "./node_modules/@istanbuljs/nyc-config-babel",
     "reporter": [
       "text",
-      "lcov"
+      "lcov",
+      "clover"
     ],
+    "all": true,
+    "check-coverage": true,
+    "lines": 85,
+    "statements": 85,
+    "functions": 85,
+    "branches": 85,
     "include": [
       "src/**/*.js"
     ],
     "exclude": [
       "src/server.js",
-      "tests/**/*.js"
+      "tests/**/*.js",
+      "**/*.spec.js",
+      "**/*.test.js"
     ],
-    "all": true,
-    "check-coverage": true,
-    "lines": 90,
-    "statements": 90,
-    "functions": 90,
-    "branches": 90,
-    "temp-dir": "coverage"
+    "temp-dir": "./coverage",
+    "cwd": ".",
+    "instrument": false,
+    "sourceMap": false,
+    "require": ["@babel/register"]
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "collectCoverage": true,
+    "coverageDirectory": "./coverage",
+    "coverageReporters": [
+      "json",
+      "lcov",
+      "text"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/server.js",
+      "!tests/**/*.js"
+    ],
+    "testTimeout": 10000,
+    "detectOpenHandles": true,
+    "verbose": true,
+    "transform": {
+      "^.+\\.js$": "babel-jest"
+    },
+    "globals": {
+      "NODE_ENV": "test"
+    }
   }
 }
