--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "author": "Tu Nombre",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.4.7",
+    "@azure/service-bus": "^7.9.5",
+    "axios": "^1.9.0",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
     "mongoose": "^8.10.1"
   },
@@ -68,7 +70,9 @@
     "cwd": ".",
     "instrument": false,
     "sourceMap": false,
-    "require": ["@babel/register"]
+    "require": [
+      "@babel/register"
+    ]
   },
   "jest": {
     "testEnvironment": "node",
