--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,62 @@
+### Node.js ###
 node_modules/
+.npm
+.pnpm
+.yarn-integrity
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+package-lock.json
+yarn.lock
+
+### Entorno ###
 .env
-.nyc_output/
+.env.local
+.env.*.local
+!.env.example
+
+### Testing y cobertura ###
 coverage/
+.nyc_output/
+*.lcov
+test-results.xml
+
+### Terraform ###
+terraform.tfstate
+terraform.tfstate.*
+*.tfvars
+.terraform/
+.terraform.lock.hcl
+terraform.plan
+terraform.tfstate.backup
+
+### Credenciales y secretos ###
+firebase-service-account.json
+firestoreConfig.js
+*.key.json
+*.secret
+gce-creds.json
+*.pem
+*.priv
+
+### IDE y editores ###
+.vscode/
+.idea/
+*.swp
+*.swo
+*.sublime-*
+*.code-workspace
+
+### Sistema operativo ###
+.DS_Store
+Thumbs.db
+*.orig
+*.bak
+*.tmp
+
+### Docker ###
+docker-compose.override.yml
+
+### Logs ###
+logs/
+*.log
