--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
   "license": "ISC",
   "dependencies": {
     "@azure/service-bus": "^7.9.5",
+    "@google-cloud/firestore": "^7.11.0",
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
-    "express": "^4.21.2",
-    "mongoose": "^8.10.1"
+    "express": "^4.21.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
